Fix sizing and spacing in Learn

--- a/src/styles/markdown-containers.less
+++ b/src/styles/markdown-containers.less
@@ -7,6 +7,8 @@
 }
 
 .columns {
+  margin-top: (@grid * 2);
+
   column-width: (@grid * 20);
   column-gap: (@grid * 4);
 
